                            CHANGES IN VERSION 0.8.0 (June 2019)
USER LEVEL CHANGES

-- Added reversible jump MCMC for variable selection via configureRJ().

-- Greatly improved speed of MCMC sampling for Bayesian nonparametric models
   with the dCRP distribution by not sampling parameters of empty clusters.
   (PR #855)

-- Improved speed of MCMC configuration (i.e., configureMCMC()) is available
   by setting nimbleOptions(oldConjugacyChecking = FALSE) and/or
   nimbleOptions(useNewConfigureMCMC = TRUE).  These new features are considered
   to be in beta testing.  Default values for these nimbleOptions give old
   behavior. (PR #910, PR #896)

-- Removed compareMCMCs() and MCMCsuite(), which are being re-written for
   release in a separate package available currently at
   https://github.com/nimble-dev/compareMCMCs.

-- Added printing option for MCMC configuration objects:
   conf$printSamplers(byType = TRUE), will display the node names being sampled,
   grouped together by the sampling algorithm acting on them (e.g., RW sampler).
   (PR #901)

-- Added options for control of MCMC behavior: MCMCmonitorAllSampledNodes to
   monitor all sampled nodes and multivariateNodesAsScalars for sampling scalars
   within multivariate nodes. (PR #895, #893)

-- Added detection of dCRP clustering of regression coefficients by detecting
   conjugacy when a linear combination is present.

-- Added support for recycling-rule in compiled code for dlogis, rlogis,
   qlogis, and plogis. (PR #911)

BUG FIXES

-- Fixed bug in conjugacy checking of CAR model structures. (PR #871)

-- model setInits method now checks for unnamed list elements. (PR #880)

-- Allow use of TRUE/FALSE for non-parameter arguments in functions in model
   code. (PR #904)

-- Correctly manage the RNG state when calling from C++ to R via a nimbleRcall.
   (PR # 897)

-- Handle issues when numerical underflow causes exact zeros as proposals in
   RW_dirichlet sampler. (PR #885)
